<resources>
    <string name="app_name">AndroidMyTaskApplication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filters">FILTERS</string>
    <string name="favorite">FAVORITES</string>
    <string name="my_cart">MY CART</string>
    <string name="information">INFORMATION</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy now</string>
    <string name="sort_by">SORT BY</string>
    <string name="search">Search</string>
    <string name="default_notification_channel_id">Default Notifications</string>
    <string name="message">Notification</string>

    <string name="share_message">Check out this %1s, here is the link: %2s</string>
    <string name="send_via_message">Send via SMS</string>
    <string name="send_via_screenshot">Send via screenshot</string>
    <string name="share">Share screenshot via</string>
    <string name="no_connection">Sorry, no internet connection</string>
</resources>